--- a/src/app/components/sandbox/sandbox.component.html
+++ b/src/app/components/sandbox/sandbox.component.html
@@ -6,11 +6,11 @@
     <input type="text" class="form-control" [(ngModel)]="user.name" name="name">
   </div>
   <div class="form-group">
-    <label>Name</label>
+    <label>Email</label>
     <input type="text" class="form-control" [(ngModel)]="user.email" name="Email">
   </div>
   <div class="form-group">
-    <label>Name</label>
+    <label>Phone</label>
     <input type="text" class="form-control" [(ngModel)]="user.phone" name="Phone">
   </div>
   <input type="submit" class="btn btn-success" value="Submit">
